src/api/java5/jna-dds/dds2tmptmp.h

typedef struct dds_key_descriptor
{
  const char * m_name;
  uint32_t m_index;
}
dds_key_descriptor_t;
/*
  Topic definitions are output by a preprocessor and have an
  implementation-private definition. The only thing exposed on the
  API is a pointer to the "topic_descriptor_t" struct type.
*/

typedef struct dds_topic_descriptor
{
  const size_t m_size;                 /* Size of topic type */
  const uint32_t m_align;              /* Alignment of topic type */
  const uint32_t m_flagset;            /* Flags */
  const uint32_t m_nkeys;              /* Number of keys (can be 0) */
  const char * m_typename;             /* Type name */
  const dds_key_descriptor_t * m_keys; /* Key descriptors (NULL iff m_nkeys 0) */
  const uint32_t m_nops;               /* Number of ops in m_ops */
  const uint32_t * m_ops;              /* Marshalling meta data */
  const char * m_meta;                 /* XML topic description meta data */
}
dds_topic_descriptor_t;
/* Handles are opaque pointers to implementation types */
typedef uint64_t dds_instance_handle_t;
typedef int32_t dds_domainid_t;
/*
  All entities are represented by a process-private handle, with one
  call to delete an entity and all entities it logically contains.
  That is, it is equivalent to combination of
  delete_contained_entities and delete_xxx in the DCPS API.
*/

/**
 * @brief Delete given entity.
 *
 * This operation will delete the given entity. It will also automatically
 * delete all its children, childrens' children, etc entities.
 *
 * TODO: Link to generic dds entity relations documentation.
 *
 * @param[in]  entity  Entity from which to get its parent.
 *
 * @returns  0 - Success (DDS_RETCODE_OK).
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_ERROR
 *                  The entity and its children (recursive are deleted).
 * @retval DDS_RETCODE_ERROR
 *                  An internal error has occurred.
 * @retval DDS_RETCODE_ILLEGAL_OPERATION
 *                  The operation is invoked on an inappropriate object.
 * @retval DDS_RETCODE_ALREADY_DELETED
 *                  The entity has already been deleted.
 */
 dds_return_t
dds_delete(
         dds_entity_t entity);
/**
 * @brief Get entity participant.
 *
 * This operation returns the participant to which the given entity belongs.
 * For instance, it will return the Participant that was used when
 * creating a Publisher that was used to create a DataWriter (when that
 * DataWriter was provided here).
 *
 * TODO: Link to generic dds entity relations documentation.
 *
 * @param[in]  entity  Entity from which to get its participant.
 *
 * @returns >0 - Success (valid entity handle).
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_ERROR
 *                  An internal error has occurred.
 * @retval DDS_RETCODE_ILLEGAL_OPERATION
 *                  The operation is invoked on an inappropriate object.
 * @retval DDS_RETCODE_ALREADY_DELETED
 *                  The entity has already been deleted.
 */
  dds_entity_t
dds_get_participant (
         dds_entity_t entity);
/**
 * @brief Get entity children.
 *
 * This operation returns the children that the entity contains.
 * For instance, it will return all the Topics, Publishers and Subscribers
 * of the Participant that was used to create those entities (when that
 * Participant is provided here).
 *
 * This functions takes a pre-allocated list to put the children in and
 * will return the number of found children. It is possible that the given
 * size of the list is not the same as the number of found children. If
 * less children are found, then the last few entries in the list are
 * untouched. When more children are found, then only 'size' number of
 * entries are inserted into the list, but still complete count of the
 * found children is returned. Which children are returned in the latter
 * case is undefined.
 *
 * When supplying NULL as list and 0 as size, you can use this to acquire
 * the number of children without having to pre-allocate a list.
 *
 * TODO: Link to generic dds entity relations documentation.
 *
 * @param[in]  entity   Entity from which to get its children.
 * @param[out] children Pre-allocated array to contain the found children.
 * @param[in]  size     Size of the pre-allocated children's list.
 *
 * @returns >=0 - Success (number of found children, can be larger than 'size').
 * @returns  <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_ERROR
 *                  An internal error has occurred.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                  The children parameter is NULL, while a size is provided.
 * @retval DDS_RETCODE_ILLEGAL_OPERATION
 *                  The operation is invoked on an inappropriate object.
 * @retval DDS_RETCODE_ALREADY_DELETED
 *                  The entity has already been deleted.
 */
  dds_return_t
dds_get_children(
                dds_entity_t entity,
           dds_entity_t *children,
                size_t size);
/**
 * @brief Get the domain id to which this entity is attached.
 *
 * When creating a participant entity, it is attached to a certain domain.
 * All the children (like Publishers) and childrens' children (like
 * DataReaders), etc are also attached to that domain.
 *
 * This function will return the original domain ID when called on
 * any of the entities within that hierarchy.
 *
 * @param[in]  entity   Entity from which to get its children.
 * @param[out] id       Pointer to put the domain ID in.
 *
 * @returns  0 - Success (DDS_RETCODE_OK).
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                  Domain ID was returned.
 * @retval DDS_RETCODE_ERROR
 *                  An internal error has occurred.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                  The id parameter is NULL.
 * @retval DDS_RETCODE_ILLEGAL_OPERATION
 *                  The operation is invoked on an inappropriate object.
 * @retval DDS_RETCODE_ALREADY_DELETED
 *                  The entity has already been deleted.
 */
  dds_return_t
dds_get_domainid(
          dds_entity_t entity,
         dds_domainid_t *id);
/**
 * @brief Get participants of a domain.
 *
 * This operation acquires the participants created on a domain and returns
 * the number of found participants.
 *
 * This function takes a domain id with the size of pre-allocated participant's
 * list in and will return the number of found participants. It is possible that
 * the given size of the list is not the same as the number of found participants.
 * If less participants are found, then the last few entries in an array stay
 * untouched. If more participants are found and the array is too small, then the
 * participants returned are undefined.
 *
 * @param[in]  domain_id    The domain id
 * @param[out] participants The participant for domain
 * @param[in]  size         Size of the pre-allocated participant's list.
 *
 * @returns >=0 - Success (number of found participants).
 * @returns  <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_ERROR
 *                  An internal error has occurred.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                  The participant parameter is NULL, while a size is provided.
 */
  dds_return_t
dds_lookup_participant(
                dds_domainid_t domain_id,
           dds_entity_t *participants,
                size_t size);
/**
 * Description : Creates a new DDS topic. The type name for the topic
 * is taken from the generated descriptor. Topic matching is done on a
 * combination of topic name and type name.
 *
 * Arguments :
 *   -# pp The participant on which the topic is being created
 *   -# descriptor The IDL generated topic descriptor
 *   -# name The name of the created topic
 *   -# qos The QoS to set on the new topic (can be NULL)
 *   -# listener Any listener functions associated with the new topic (can be NULL)
 *   -# Returns a status, 0 on success or non-zero value to indicate an error
 */
 dds_entity_t
dds_create_topic(
         dds_entity_t participant,
         const dds_topic_descriptor_t *descriptor,
         const char *name,
         const dds_qos_t *qos,
         const dds_listener_t *listener);
/**
 * Description : Finds a named topic. Returns NULL if does not exist.
 * The returned topic should be released with dds_delete.
 *
 * Arguments :
 *   -# pp The participant on which to find the topic
 *   -# name The name of the topic to find
 *   -# Returns a topic, NULL if could not be found or error
 */
 dds_entity_t
dds_find_topic(
         dds_entity_t participant,
         const char *name);
/**
 * Description : Returns a topic name.
 *
 * Arguments :
 *   -# topic The topic
 *   -# Returns The topic name or NULL to indicate an error
 */
/* TODO: do we need a convenience version as well that allocates and add a _s suffix to this one? */
/* TODO: Check annotation. Could be writes_to_(size, return + 1) as well. */
 dds_return_t
dds_get_name(
                         dds_entity_t topic,
         char *name,
                         size_t size);
/**
 * Description : Returns a topic type name.
 *
 * Arguments :
 *   -# topic The topic
 *   -# Returns The topic type name or NULL to indicate an error
 */
 dds_return_t
dds_get_type_name(
         dds_entity_t topic,
         char *name,
         size_t size);
/**
 * @brief Creates a new instance of a DDS subscriber
 *
 * @param[in]  participant The participant on which the subscriber is being created
 * @param[in]  qos         The QoS to set on the new subscriber (can be NULL)
 * @param[in]  listener    Any listener functions associated with the new subscriber (can be NULL)

 * @returns >0 - Success (valid handle of a subscriber entity).
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_ERROR
 *                  An internal error has occurred.
 *         DDS_RETCODE_BAD_PARAMETER
 *                  One of the parameters is invalid
 */
  dds_entity_t
dds_create_subscriber(
             dds_entity_t participant,
         const dds_qos_t *qos,
         const dds_listener_t *listener);
/**
 * @brief Creates a new instance of a DDS publisher
 *
 * @param[in]  participant The participant to create a publisher for
 * @param[in]  qos         The QoS to set on the new publisher (can be NULL)
 * @param[in]  listener    Any listener functions associated with the new publisher (can be NULL)
 *
 * @returns >0 - Success (valid handle of a publisher entity).
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 */
  dds_entity_t
dds_create_publisher(
             dds_entity_t participant,
         const dds_qos_t *qos,
         const dds_listener_t *listener);
/**
 * @brief Suspends the publications of the Publisher
 *
 * This operation is a hint to the Service so it can optimize its performance by e.g., collecting
 * modifications to DDS writers and then batching them. The Service is not required to use the hint.
 *
 * Every invocation of this operation must be matched by a corresponding call to @see dds_resume
 * indicating that the set of modifications has completed.
 *
 * @param[in]  publisher The publisher for which all publications will be suspended
 *
 * @returns >0 - Success.
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                Publications suspended successfully.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                The pub parameter is not a valid publisher.
 * @retval DDS_RETCODE_UNSUPPORTED
 *                Operation is not supported
 */
 dds_return_t
dds_suspend(
         dds_entity_t publisher);
/**
 * @brief Resumes the publications of the Publisher
 *
 * This operation is a hint to the Service to indicate that the application has completed changes
 * initiated by a previous @see suspend. The Service is not required to use the hint.
 *
 * The call to resume_publications must match a previous call to @see suspend_publications.
 *
 * @param[in]  publisher The publisher for which all publications will be resumed
 *
 * @returns >0 - Success.
 * @returns <0 - Failure (use dds_err_nr() to get error value).
 *
 * @retval DDS_RETCODE_OK
 *                Publications resumed successfully.
 * @retval DDS_RETCODE_BAD_PARAMETER
 *                The pub parameter is not a valid publisher.
 * @retval DDS_RETCODE_PRECONDITION_NOT_MET
 *                No previous matching @see dds_suspend.
 * @retval DDS_RETCODE_UNSUPPORTED
 *                Operation is not supported.
 */
 dds_return_t
dds_resume(
         dds_entity_t publisher);
/**
 * Description : Retrieves the matched publications (for a given Reader) or subscriptions (for a given Writer)
 *
 * Arguments :
 * -# wr_or_r Writer or Reader
 * -# handles Array of size nofHandles
 * -# nofHandles Number of elements that can be written to in handles
 *
 * -# Returns the number of available matched publications or subscriptions. If return > nofHandles
 *    the resulting set is truncated. Handles are only initialized up to min(return, nofHandles).
 */
 dds_return_t dds_get_matched( dds_entity_t wr_or_r, writes_to_(nofHandles, return) dds_instance_handle_t *handles,  size_t nofHandles);
/**
 * Description : Retrieve the query-parameters
 *
 *
 * Arguments :
 * -# top_mt_qc Topic, MultiTopic, QueryConditon
 */
 dds_return_t dds_get_query_parameters( dds_entity_t e, writes_to_(npars, return) const char ** params,  size_t npars);