src/api/java5/jna-dds/typedef.h

typedef int32_t dds_entity_t;
typedef int32_t dds_return_t;