src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * @brief Get entity participant.<br>
	 * This operation returns the participant to which the given entity belongs.<br>
	 * For instance, it will return the Participant that was used when<br>
	 * creating a Publisher that was used to create a DataWriter (when that<br>
	 * DataWriter was provided here).<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity  Entity from which to get its participant.<br>
	 * @returns >0 - Success (valid entity handle).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_get_participant(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:542</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_get_participant(DdscLibrary.dds_entity_t entity);
	/**
	 * @brief Get entity children.<br>
	 * This operation returns the children that the entity contains.<br>
	 * For instance, it will return all the Topics, Publishers and Subscribers<br>
	 * of the Participant that was used to create those entities (when that<br>
	 * Participant is provided here).<br>
	 * This functions takes a pre-allocated list to put the children in and<br>
	 * will return the number of found children. It is possible that the given<br>
	 * size of the list is not the same as the number of found children. If<br>
	 * less children are found, then the last few entries in the list are<br>
	 * untouched. When more children are found, then only 'size' number of<br>
	 * entries are inserted into the list, but still complete count of the<br>
	 * found children is returned. Which children are returned in the latter<br>
	 * case is undefined.<br>
	 * When supplying NULL as list and 0 as size, you can use this to acquire<br>
	 * the number of children without having to pre-allocate a list.<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity   Entity from which to get its children.<br>
	 * @param[out] children Pre-allocated array to contain the found children.<br>
	 * @param[in]  size     Size of the pre-allocated children's list.<br>
	 * @returns >=0 - Success (number of found children, can be larger than 'size').<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The children parameter is NULL, while a size is provided.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_get_children(dds_entity_t, dds_entity_t*, size_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:575</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_children(DdscLibrary.dds_entity_t entity, DdscLibrary.dds_entity_t children, NativeSize size);
	/**
	 * @brief Get the domain id to which this entity is attached.<br>
	 * When creating a participant entity, it is attached to a certain domain.<br>
	 * All the children (like Publishers) and childrens' children (like<br>
	 * DataReaders), etc are also attached to that domain.<br>
	 * This function will return the original domain ID when called on<br>
	 * any of the entities within that hierarchy.<br>
	 * @param[in]  entity   Entity from which to get its children.<br>
	 * @param[out] id       Pointer to put the domain ID in.<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                  Domain ID was returned.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The id parameter is NULL.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_get_domainid(dds_entity_t, dds_domainid_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:599</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_domainid(DdscLibrary.dds_entity_t entity, IntBuffer id);
	/**
	 * @brief Get participants of a domain.<br>
	 * This operation acquires the participants created on a domain and returns<br>
	 * the number of found participants.<br>
	 * This function takes a domain id with the size of pre-allocated participant's<br>
	 * list in and will return the number of found participants. It is possible that<br>
	 * the given size of the list is not the same as the number of found participants.<br>
	 * If less participants are found, then the last few entries in an array stay<br>
	 * untouched. If more participants are found and the array is too small, then the<br>
	 * participants returned are undefined.<br>
	 * @param[in]  domain_id    The domain id<br>
	 * @param[out] participants The participant for domain<br>
	 * @param[in]  size         Size of the pre-allocated participant's list.<br>
	 * @returns >=0 - Success (number of found participants).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The participant parameter is NULL, while a size is provided.<br>
	 * Original signature : <code>dds_return_t dds_lookup_participant(dds_domainid_t, dds_entity_t*, size_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:621</i>
	 */
	public static native DdscLibrary.dds_return_t dds_lookup_participant(int domain_id, DdscLibrary.dds_entity_t participants, NativeSize size);
	/**
	 * Description : Creates a new DDS topic. The type name for the topic<br>
	 * is taken from the generated descriptor. Topic matching is done on a<br>
	 * combination of topic name and type name.<br>
	 * Arguments :<br>
	 *   -# pp The participant on which the topic is being created<br>
	 *   -# descriptor The IDL generated topic descriptor<br>
	 *   -# name The name of the created topic<br>
	 *   -# qos The QoS to set on the new topic (can be NULL)<br>
	 *   -# listener Any listener functions associated with the new topic (can be NULL)<br>
	 *   -# Returns a status, 0 on success or non-zero value to indicate an error<br>
	 * Original signature : <code>dds_entity_t dds_create_topic(dds_entity_t, const dds_topic_descriptor_t*, const char*, const dds_qos_t*, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:635</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_topic(DdscLibrary.dds_entity_t participant, dds_topic_descriptor descriptor, String name, DdscLibrary.dds_qos_t qos, DdscLibrary.dds_listener_t listener);
	/**
	 * Description : Finds a named topic. Returns NULL if does not exist.<br>
	 * The returned topic should be released with dds_delete.<br>
	 * Arguments :<br>
	 *   -# pp The participant on which to find the topic<br>
	 *   -# name The name of the topic to find<br>
	 *   -# Returns a topic, NULL if could not be found or error<br>
	 * Original signature : <code>dds_entity_t dds_find_topic(dds_entity_t, const char*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:645</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_find_topic(DdscLibrary.dds_entity_t participant, String name);
	/**
	 * TODO: Check annotation. Could be writes_to_(size, return + 1) as well.<br>
	 * Original signature : <code>dds_return_t dds_get_name(dds_entity_t, char*, size_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:650</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_name(DdscLibrary.dds_entity_t topic, String name, NativeSize size);
	/**
	 * Description : Returns a topic type name.<br>
	 * Arguments :<br>
	 *   -# topic The topic<br>
	 *   -# Returns The topic type name or NULL to indicate an error<br>
	 * Original signature : <code>dds_return_t dds_get_type_name(dds_entity_t, char*, size_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:658</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_type_name(DdscLibrary.dds_entity_t topic, String name, NativeSize size);
	/**
	 * @brief Creates a new instance of a DDS subscriber<br>
	 * @param[in]  participant The participant on which the subscriber is being created<br>
	 * @param[in]  qos         The QoS to set on the new subscriber (can be NULL)<br>
	 * @param[in]  listener    Any listener functions associated with the new subscriber (can be NULL)<br>
	 * @returns >0 - Success (valid handle of a subscriber entity).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 *         DDS_RETCODE_BAD_PARAMETER<br>
	 *                  One of the parameters is invalid<br>
	 * Original signature : <code>dds_entity_t dds_create_subscriber(dds_entity_t, const dds_qos_t*, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:672</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_subscriber(DdscLibrary.dds_entity_t participant, DdscLibrary.dds_qos_t qos, DdscLibrary.dds_listener_t listener);
	/**
	 * @brief Creates a new instance of a DDS publisher<br>
	 * @param[in]  participant The participant to create a publisher for<br>
	 * @param[in]  qos         The QoS to set on the new publisher (can be NULL)<br>
	 * @param[in]  listener    Any listener functions associated with the new publisher (can be NULL)<br>
	 * @returns >0 - Success (valid handle of a publisher entity).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * Original signature : <code>dds_entity_t dds_create_publisher(dds_entity_t, const dds_qos_t*, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:682</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_publisher(DdscLibrary.dds_entity_t participant, DdscLibrary.dds_qos_t qos, DdscLibrary.dds_listener_t listener);
	/**
	 * @brief Suspends the publications of the Publisher<br>
	 * This operation is a hint to the Service so it can optimize its performance by e.g., collecting<br>
	 * modifications to DDS writers and then batching them. The Service is not required to use the hint.<br>
	 * Every invocation of this operation must be matched by a corresponding call to @see dds_resume<br>
	 * indicating that the set of modifications has completed.<br>
	 * @param[in]  publisher The publisher for which all publications will be suspended<br>
	 * @returns >0 - Success.<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                Publications suspended successfully.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                The pub parameter is not a valid publisher.<br>
	 * @retval DDS_RETCODE_UNSUPPORTED<br>
	 *                Operation is not supported<br>
	 * Original signature : <code>dds_return_t dds_suspend(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:700</i>
	 */
	public static native DdscLibrary.dds_return_t dds_suspend(DdscLibrary.dds_entity_t publisher);
